RESOLVED FIXED119587
WKBundleFrameCopyProvisionalURL crashes when there is no provisional loader
https://bugs.webkit.org/show_bug.cgi?id=119587
Summary WKBundleFrameCopyProvisionalURL crashes when there is no provisional loader
Alexey Proskuryakov
Reported 2013-08-08 11:56:44 PDT
WKBundleFrameCopyProvisionalURL crashes when there is no provisional loader.
Attachments
proposed fix (1.39 KB, patch)
2013-08-08 11:58 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2013-08-08 11:58:24 PDT
Created attachment 208359 [details] proposed fix
Darin Adler
Comment 2 2013-08-08 12:16:02 PDT
Comment on attachment 208359 [details] proposed fix I’m going to assume that it’s better to return null rather than returning the committed string for that frame.
Alexey Proskuryakov
Comment 3 2013-08-08 12:23:21 PDT
Committed <http://trac.webkit.org/changeset/153839>. Yes, I think that it would be misleading to return committed URL when asked for provisional one. This also matches how -[WebFrame provisionalDataSource] works.
Note You need to log in before you can comment on or make changes to this bug.