        WKBundleFrameCopyProvisionalURL crashes when there is no provisional loader         https://bugs.webkit.org/show_bug.cgi?id=119587

Reviewed by Darin Adler.

        * WebProcess/WebPage/WebFrame.cpp: (WebKit::WebFrame::provisionalURL): Added a null
        check, like we already have in WebFrame::url().



Canonical link: https://commits.webkit.org/137546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153839 268f45cc-cd09-0410-ab3c-d52691b4dbfc